bat.string1.lessons.bat.string1.StringTimes.scala.error
stringTimes:3: error: value =+ is not a member of String
                                             for (i <- 0 to n-1) {s=s=+str};return s} 
                                                                     ^